# rampler

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: rampler.yml
src/: main.cpp  sampler.cpp  sampler.hpp  subsampler.cpp  subsampler.hpp
